<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <TextView
        android:id="@+id/account_info_account_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/my_account"
        android:textColor="#211414"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_info_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/name"
        android:textColor="#211414"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/account_info_account_text_view"
        app:layout_constraintTop_toBottomOf="@+id/account_info_account_text_view" />

    <TextView
        android:id="@+id/account_info_name_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#7D211414"
        app:layout_constraintStart_toStartOf="@+id/account_info_name_text_view"
        app:layout_constraintTop_toBottomOf="@+id/account_info_name_text_view" />

    <TextView
        android:id="@+id/account_info_email_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/email"
        android:textColor="#211414"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/account_info_name_value_text_view"
        app:layout_constraintTop_toBottomOf="@+id/account_info_name_value_text_view" />

    <TextView
        android:id="@+id/account_info_email_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#7D211414"
        app:layout_constraintStart_toStartOf="@+id/account_info_email_text_view"
        app:layout_constraintTop_toBottomOf="@+id/account_info_email_text_view" />

    <TextView
        android:id="@+id/account_info_reviews_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/number_of_review"
        android:textColor="#211414"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/account_info_email_value_text_view"
        app:layout_constraintTop_toBottomOf="@+id/account_info_email_value_text_view" />

    <TextView
        android:id="@+id/account_info_reviews_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textColor="#7D211414"
        app:layout_constraintStart_toStartOf="@+id/account_info_reviews_text_view"
        app:layout_constraintTop_toBottomOf="@+id/account_info_reviews_text_view" />

    <Button
        android:id="@+id/account_info_logout_button"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/black"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>